fix(global): revert styling columns on mobile, move profile section to same line

--- a/src/style.css
+++ b/src/style.css
@@ -146,11 +146,6 @@ a {
     width: auto;
   }
 
-  .blockHeader {
-    display: flex;
-    flex-direction: column;
-  }
-
   .largeFont {
     all: unset;
     font-size: 20px;
